--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: #8de4e9;
+    background-color: #80deea;    
     color: #333;
 }
 
