--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
     height: 140px;
     border-radius: 50%;
     margin-bottom: 15px;
-    border: 4px solid #ffffff; 
+    border: 4px solid #dff2ff; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
@@ -182,3 +182,4 @@ hr {
     text-decoration: underline; 
     color: #ff1744;
 }
+
